--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pr-autofill",
-  "version": "0.1.0",
+  "version": "1.0.1",
   "private": true,
   "dependencies": {
     "react": "^15.6.1",
@@ -10,6 +10,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "package": "npm run build && zip package.zip build/*",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
